[package]
name = "matter_proc"
version = "0.1.0"
edition = "2021"
description = "Matter Setup Payload cmdline tools"
homepage = "https://github.com/Deepdive543443/Matter-Setup-Payload-Rust"
license = "MIT"

[dependencies]
verhoeff = "1.0.0"
clap = { version = "4.5.20", features = ["derive"] }
deku = "0.18.1"
qrcode-generator = "5.0.0"

[lib]
name = "matter_proc"
